<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2016 Ubiqueworks Ltd and contributors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation
  ~ files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify,
  ~ merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT
  ~ SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/admin_unlock_password_field"
        android:layout_marginTop="@dimen/view_vertical_spacing_default"
        android:layout_marginBottom="@dimen/view_vertical_spacing_default"
        android:layout_marginLeft="@dimen/view_horizontal_spacing_default"
        android:layout_marginRight="@dimen/view_horizontal_spacing_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="280dp"
        android:inputType="textPassword"
        android:imeOptions="actionGo"/>

    <TextView
        android:id="@+id/admin_unlock_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_horizontal_spacing_default"
        android:layout_marginRight="@dimen/view_horizontal_spacing_default"
        android:textAppearance="@style/TextAppearance.NeoTree.Error"
        android:text="@string/error_invalid_password"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/admin_unlock_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_action_cancel"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/admin_unlock_unlock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_action_unlock"/>

    </LinearLayout>

</LinearLayout>
