<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2016 Ubiqueworks Ltd and contributors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation
  ~ files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify,
  ~ merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT
  ~ SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:id="@+id/session_item_wrapper"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/listPreferredItemHeight"
            android:paddingTop="@dimen/card_vertical_padding"
            android:paddingBottom="@dimen/card_vertical_padding"
            android:paddingLeft="@dimen/card_horizontal_padding"
            android:paddingRight="@dimen/card_horizontal_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.NeoTree.Caption"
                        android:text="@string/label_session_item_start_date" />

                    <TextView
                        android:id="@+id/session_item_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_vertical_spacing_smaller"
                        android:textAppearance="@style/TextAppearance.NeoTree.Body.Small.Black"
                        tools:text="20/09/2012 12:00"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.NeoTree.Caption"
                        android:text="@string/label_session_item_end_date" />

                    <TextView
                        android:id="@+id/session_item_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_vertical_spacing_smaller"
                        android:textAppearance="@style/TextAppearance.NeoTree.Body.Small.Black"
                        tools:text="20/09/2012 12:00"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_spacing_small"
                android:textAppearance="@style/TextAppearance.NeoTree.Caption"
                android:text="@string/label_session_item_script_title" />

            <TextView
                android:id="@+id/session_item_script_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_vertical_spacing_smaller"
                android:textAppearance="@style/TextAppearance.NeoTree.Body.Small.Black"
                tools:text="Script #1"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>