<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2016 Ubiqueworks Ltd and contributors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation
  ~ files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify,
  ~ merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT
  ~ SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
  ~ ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/view_vertical_spacing_larger"
    android:paddingBottom="@dimen/view_vertical_spacing_larger"
    android:paddingLeft="@dimen/view_horizontal_spacing_large"
    android:paddingRight="@dimen/view_horizontal_spacing_large"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pdf_page_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pdf_cover_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/view_vertical_spacing_small"
                android:paddingBottom="@dimen/view_vertical_spacing_default"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:paddingBottom="@dimen/view_vertical_spacing_small"
                    android:textAppearance="@style/TextAppearance.Pdf.Title"
                    android:text="@string/pdf_label_title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:textAppearance="@style/TextAppearance.Pdf.SubTitle"
                    android:text="@string/pdf_label_subtitle"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="@dimen/view_vertical_spacing_default"
            android:background="@color/colorDivider"/>

        <!-- Page Body -->
        <LinearLayout
            android:id="@+id/pdf_page_body_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pdf_page_body_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"/>

            <LinearLayout
                android:id="@+id/pdf_page_body_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" />

        </LinearLayout>

        <!-- Page Footer -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="@dimen/view_vertical_spacing_default"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/view_vertical_spacing_smaller"
            android:paddingBottom="@dimen/view_vertical_spacing_smaller"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:textAppearance="@style/TextAppearance.Pdf.Caption"
                    android:text="@string/pdf_label_session_id"/>

                <TextView
                    android:id="@+id/pdf_page_session_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:textAppearance="@style/TextAppearance.Pdf.Caption"
                    tools:text="Session ID"/>

            </LinearLayout>

            <TextView
                android:id="@+id/pdf_page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.Pdf.Caption"
                tools:text="1/1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:textAppearance="@style/TextAppearance.Pdf.Caption"
                    android:text="@string/pdf_label_creation_date"/>

                <TextView
                    android:id="@+id/pdf_page_creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/view_horizontal_spacing_default"
                    android:paddingRight="@dimen/view_horizontal_spacing_default"
                    android:textAppearance="@style/TextAppearance.Pdf.Caption"
                    tools:text="dd/MM/yyyy HH:mm"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>